--- a/artifacts/channel/configtx.yaml
+++ b/artifacts/channel/configtx.yaml
@@ -106,9 +106,13 @@ Orderer: &OrdererDefaults
     Addresses:
         - orderer.example.com:7050
 
-    BatchTimeout: 2s
-
     # Make the changes here
+    BatchTimeout: 2s
+    # BatchTimeout: 4s
+    # BatchTimeout: 6s
+    # BatchTimeout: 10s
+    # BatchTimeout: 14s
+
     BatchSize:
         MaxMessageCount: 10
         AbsoluteMaxBytes: 99 MB
