Completed Configuration for graph7

--- a/caliper/caliper-benchmarks-local/benchmarks/scenario/base/config.yaml
+++ b/caliper/caliper-benchmarks-local/benchmarks/scenario/base/config.yaml
@@ -1,6 +1,6 @@
 variables:
-  txNumber: 1000 #Make the changes here
-  tps: 100
+  txNumber: 1000 
+  tps: 100  #Make changes here
 
 test:
   workers:
