--- a/artifacts/channel/configtx.yaml
+++ b/artifacts/channel/configtx.yaml
@@ -111,6 +111,10 @@ Orderer: &OrdererDefaults
         - orderer5.example.com:11050
         - orderer6.example.com:12050
         - orderer7.example.com:13050
+        - orderer8.example.com:14050
+        - orderer9.example.com:15050
+        - orderer10.example.com:16050
+        - orderer11.example.com:17050
 
     BatchTimeout: 2s
 
