--- a/caliper/caliper-benchmarks-local/networks/fabric/base/network-config.yaml
+++ b/caliper/caliper-benchmarks-local/networks/fabric/base/network-config.yaml
@@ -56,6 +56,13 @@ channels:
       - orderer3.example.com
       - orderer4.example.com
       - orderer5.example.com
+      - orderer6.example.com
+      - orderer7.example.com
+      - orderer8.example.com
+      - orderer9.example.com
+      - orderer10.example.com
+      - orderer11.example.com
+    
     peers:
       peer0.org1.example.com:
         eventSource: true
@@ -136,6 +143,30 @@ orderers:
       ssl-target-name-override: orderer7.example.com
     tlsCACerts:
       path: networks/fabric/base/crypto-config/ordererOrganizations/example.com/orderers/orderer7.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
+  orderer8.example.com:
+    url: grpcs://localhost:14050
+    grpcOptions:
+      ssl-target-name-override: orderer8.example.com
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/ordererOrganizations/example.com/orderers/orderer8.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
+  orderer9.example.com:
+    url: grpcs://localhost:15050
+    grpcOptions:
+      ssl-target-name-override: orderer9.example.com
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/ordererOrganizations/example.com/orderers/orderer9.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
+  orderer10.example.com:
+    url: grpcs://localhost:16050
+    grpcOptions:
+      ssl-target-name-override: orderer10.example.com
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/ordererOrganizations/example.com/orderers/orderer10.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
+  orderer11.example.com:
+    url: grpcs://localhost:17050
+    grpcOptions:
+      ssl-target-name-override: orderer11.example.com
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/ordererOrganizations/example.com/orderers/orderer11.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
 
 peers:
   peer0.org1.example.com:
