--- a/artifacts/channel/configtx.yaml
+++ b/artifacts/channel/configtx.yaml
@@ -115,6 +115,10 @@ Orderer: &OrdererDefaults
         - orderer9.example.com:15050
         - orderer10.example.com:16050
         - orderer11.example.com:17050
+        - orderer12.example.com:18050
+        - orderer13.example.com:19050
+        - orderer14.example.com:20050
+        - orderer15.example.com:21050
 
     BatchTimeout: 2s
 
