--- a/caliper/caliper-benchmarks-local/networks/fabric/base/network-config.yaml
+++ b/caliper/caliper-benchmarks-local/networks/fabric/base/network-config.yaml
@@ -62,7 +62,10 @@ channels:
       - orderer9.example.com
       - orderer10.example.com
       - orderer11.example.com
-    
+      - orderer12.example.com
+      - orderer13.example.com
+      - orderer14.example.com
+      - orderer15.example.com
     peers:
       peer0.org1.example.com:
         eventSource: true
@@ -167,6 +170,30 @@ orderers:
       ssl-target-name-override: orderer11.example.com
     tlsCACerts:
       path: networks/fabric/base/crypto-config/ordererOrganizations/example.com/orderers/orderer11.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
+  orderer12.example.com:
+    url: grpcs://localhost:18050
+    grpcOptions:
+      ssl-target-name-override: orderer12.example.com
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/ordererOrganizations/example.com/orderers/orderer12.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
+  orderer13.example.com:
+    url: grpcs://localhost:19050
+    grpcOptions:
+      ssl-target-name-override: orderer13.example.com
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/ordererOrganizations/example.com/orderers/orderer13.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
+  orderer14.example.com:
+    url: grpcs://localhost:20050
+    grpcOptions:
+      ssl-target-name-override: orderer14.example.com
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/ordererOrganizations/example.com/orderers/orderer14.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
+  orderer15.example.com:
+    url: grpcs://localhost:21050
+    grpcOptions:
+      ssl-target-name-override: orderer15.example.com
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/ordererOrganizations/example.com/orderers/orderer15.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
 
 peers:
   peer0.org1.example.com:
