--- a/caliper/caliper-benchmarks-local/networks/fabric/base/network-config.yaml
+++ b/caliper/caliper-benchmarks-local/networks/fabric/base/network-config.yaml
@@ -54,18 +54,7 @@ channels:
       - orderer.example.com
       - orderer2.example.com
       - orderer3.example.com
-      - orderer4.example.com
-      - orderer5.example.com
-      - orderer6.example.com
-      - orderer7.example.com
-      - orderer8.example.com
-      - orderer9.example.com
-      - orderer10.example.com
-      - orderer11.example.com
-      - orderer12.example.com
-      - orderer13.example.com
-      - orderer14.example.com
-      - orderer15.example.com
+      
     peers:
       peer0.org1.example.com:
         eventSource: true
@@ -81,6 +70,17 @@ organizations:
       - peer2.org1.example.com
       - peer3.org1.example.com
       - peer4.org1.example.com
+      - peer5.org1.example.com
+      - peer6.org1.example.com
+      - peer7.org1.example.com
+      - peer8.org1.example.com
+      - peer9.org1.example.com
+      # - peer10.org1.example.com
+      # - peer11.org1.example.com
+      # - peer12.org1.example.com
+      # - peer13.org1.example.com
+      # - peer14.org1.example.com
+
     # certificateAuthorities:
     #   - ca.org1.example.com
     adminPrivateKey:
@@ -96,6 +96,16 @@ organizations:
       - peer2.org2.example.com
       - peer3.org2.example.com
       - peer4.org2.example.com
+      - peer5.org2.example.com
+      - peer6.org2.example.com
+      - peer7.org2.example.com
+      - peer8.org2.example.com
+      - peer9.org2.example.com
+      # - peer10.org2.example.com
+      # - peer11.org2.example.com
+      # - peer12.org2.example.com
+      # - peer13.org2.example.com
+      # - peer14.org2.example.com
     # certificateAuthorities:
     #   - ca.org2.example.com
     adminPrivateKey:
@@ -122,78 +132,6 @@ orderers:
       ssl-target-name-override: orderer3.example.com
     tlsCACerts:
       path: networks/fabric/base/crypto-config/ordererOrganizations/example.com/orderers/orderer3.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
-  orderer4.example.com:
-    url: grpcs://localhost:10050
-    grpcOptions:
-      ssl-target-name-override: orderer4.example.com
-    tlsCACerts:
-      path: networks/fabric/base/crypto-config/ordererOrganizations/example.com/orderers/orderer4.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
-  orderer5.example.com:
-    url: grpcs://localhost:11050
-    grpcOptions:
-      ssl-target-name-override: orderer5.example.com
-    tlsCACerts:
-      path: networks/fabric/base/crypto-config/ordererOrganizations/example.com/orderers/orderer5.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
-  orderer6.example.com:
-    url: grpcs://localhost:12050
-    grpcOptions:
-      ssl-target-name-override: orderer6.example.com
-    tlsCACerts:
-      path: networks/fabric/base/crypto-config/ordererOrganizations/example.com/orderers/orderer6.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
-  orderer7.example.com:
-    url: grpcs://localhost:13050
-    grpcOptions:
-      ssl-target-name-override: orderer7.example.com
-    tlsCACerts:
-      path: networks/fabric/base/crypto-config/ordererOrganizations/example.com/orderers/orderer7.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
-  orderer8.example.com:
-    url: grpcs://localhost:14050
-    grpcOptions:
-      ssl-target-name-override: orderer8.example.com
-    tlsCACerts:
-      path: networks/fabric/base/crypto-config/ordererOrganizations/example.com/orderers/orderer8.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
-  orderer9.example.com:
-    url: grpcs://localhost:15050
-    grpcOptions:
-      ssl-target-name-override: orderer9.example.com
-    tlsCACerts:
-      path: networks/fabric/base/crypto-config/ordererOrganizations/example.com/orderers/orderer9.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
-  orderer10.example.com:
-    url: grpcs://localhost:16050
-    grpcOptions:
-      ssl-target-name-override: orderer10.example.com
-    tlsCACerts:
-      path: networks/fabric/base/crypto-config/ordererOrganizations/example.com/orderers/orderer10.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
-  orderer11.example.com:
-    url: grpcs://localhost:17050
-    grpcOptions:
-      ssl-target-name-override: orderer11.example.com
-    tlsCACerts:
-      path: networks/fabric/base/crypto-config/ordererOrganizations/example.com/orderers/orderer11.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
-  orderer12.example.com:
-    url: grpcs://localhost:18050
-    grpcOptions:
-      ssl-target-name-override: orderer12.example.com
-    tlsCACerts:
-      path: networks/fabric/base/crypto-config/ordererOrganizations/example.com/orderers/orderer12.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
-  orderer13.example.com:
-    url: grpcs://localhost:19050
-    grpcOptions:
-      ssl-target-name-override: orderer13.example.com
-    tlsCACerts:
-      path: networks/fabric/base/crypto-config/ordererOrganizations/example.com/orderers/orderer13.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
-  orderer14.example.com:
-    url: grpcs://localhost:20050
-    grpcOptions:
-      ssl-target-name-override: orderer14.example.com
-    tlsCACerts:
-      path: networks/fabric/base/crypto-config/ordererOrganizations/example.com/orderers/orderer14.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
-  orderer15.example.com:
-    url: grpcs://localhost:21050
-    grpcOptions:
-      ssl-target-name-override: orderer15.example.com
-    tlsCACerts:
-      path: networks/fabric/base/crypto-config/ordererOrganizations/example.com/orderers/orderer15.example.com/msp/tlscacerts/tlsca.example.com-cert.pem
 
 peers:
   peer0.org1.example.com:
@@ -236,6 +174,46 @@ peers:
     tlsCACerts:
       path: networks/fabric/base/crypto-config/peerOrganizations/org1.example.com/peers/peer4.org1.example.com/msp/tlscacerts/tlsca.org1.example.com-cert.pem
 
+  peer5.org1.example.com:
+    url: grpcs://localhost:7076
+    grpcOptions:
+      ssl-target-name-override: peer5.org1.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org1.example.com/peers/peer5.org1.example.com/msp/tlscacerts/tlsca.org1.example.com-cert.pem
+
+  peer6.org1.example.com:
+    url: grpcs://localhost:7081
+    grpcOptions:
+      ssl-target-name-override: peer6.org1.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org1.example.com/peers/peer6.org1.example.com/msp/tlscacerts/tlsca.org1.example.com-cert.pem
+
+  peer7.org1.example.com:
+    url: grpcs://localhost:7086
+    grpcOptions:
+      ssl-target-name-override: peer7.org1.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org1.example.com/peers/peer7.org1.example.com/msp/tlscacerts/tlsca.org1.example.com-cert.pem
+
+  peer8.org1.example.com:
+    url: grpcs://localhost:7091
+    grpcOptions:
+      ssl-target-name-override: peer8.org1.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org1.example.com/peers/peer8.org1.example.com/msp/tlscacerts/tlsca.org1.example.com-cert.pem
+
+  peer9.org1.example.com:
+    url: grpcs://localhost:7096
+    grpcOptions:
+      ssl-target-name-override: peer9.org1.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org1.example.com/peers/peer9.org1.example.com/msp/tlscacerts/tlsca.org1.example.com-cert.pem
+
   peer0.org2.example.com:
     url: grpcs://localhost:8051
     grpcOptions:
@@ -275,3 +253,44 @@ peers:
       grpc.keepalive_time_ms: 600000
     tlsCACerts:
       path: networks/fabric/base/crypto-config/peerOrganizations/org2.example.com/peers/peer4.org2.example.com/msp/tlscacerts/tlsca.org2.example.com-cert.pem
+
+  peer5.org2.example.com:
+    url: grpcs://localhost:9076
+    grpcOptions:
+      ssl-target-name-override: peer5.org2.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org2.example.com/peers/peer5.org2.example.com/msp/tlscacerts/tlsca.org2.example.com-cert.pem
+
+  peer6.org2.example.com:
+    url: grpcs://localhost:9081
+    grpcOptions:
+      ssl-target-name-override: peer6.org2.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org2.example.com/peers/peer6.org2.example.com/msp/tlscacerts/tlsca.org2.example.com-cert.pem
+
+  peer7.org2.example.com:
+    url: grpcs://localhost:9086
+    grpcOptions:
+      ssl-target-name-override: peer7.org2.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org2.example.com/peers/peer7.org2.example.com/msp/tlscacerts/tlsca.org2.example.com-cert.pem
+
+  peer8.org2.example.com:
+    url: grpcs://localhost:9091
+    grpcOptions:
+      ssl-target-name-override: peer8.org2.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org2.example.com/peers/peer8.org2.example.com/msp/tlscacerts/tlsca.org2.example.com-cert.pem
+
+  peer9.org2.example.com:
+    url: grpcs://localhost:9096
+    grpcOptions:
+      ssl-target-name-override: peer9.org2.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org2.example.com/peers/peer9.org2.example.com/msp/tlscacerts/tlsca.org2.example.com-cert.pem
+
