--- a/caliper/caliper-benchmarks-local/networks/fabric/base/network-config.yaml
+++ b/caliper/caliper-benchmarks-local/networks/fabric/base/network-config.yaml
@@ -75,11 +75,11 @@ organizations:
       - peer7.org1.example.com
       - peer8.org1.example.com
       - peer9.org1.example.com
-      # - peer10.org1.example.com
-      # - peer11.org1.example.com
-      # - peer12.org1.example.com
-      # - peer13.org1.example.com
-      # - peer14.org1.example.com
+      - peer10.org1.example.com
+      - peer11.org1.example.com
+      - peer12.org1.example.com
+      - peer13.org1.example.com
+      - peer14.org1.example.com
 
     # certificateAuthorities:
     #   - ca.org1.example.com
@@ -101,11 +101,11 @@ organizations:
       - peer7.org2.example.com
       - peer8.org2.example.com
       - peer9.org2.example.com
-      # - peer10.org2.example.com
-      # - peer11.org2.example.com
-      # - peer12.org2.example.com
-      # - peer13.org2.example.com
-      # - peer14.org2.example.com
+      - peer10.org2.example.com
+      - peer11.org2.example.com
+      - peer12.org2.example.com
+      - peer13.org2.example.com
+      - peer14.org2.example.com
     # certificateAuthorities:
     #   - ca.org2.example.com
     adminPrivateKey:
@@ -214,6 +214,54 @@ peers:
     tlsCACerts:
       path: networks/fabric/base/crypto-config/peerOrganizations/org1.example.com/peers/peer9.org1.example.com/msp/tlscacerts/tlsca.org1.example.com-cert.pem
 
+  peer10.org1.example.com:
+    url: grpcs://localhost:7101
+    grpcOptions:
+      ssl-target-name-override: peer10.org1.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org1.example.com/peers/peer10.org1.example.com/msp/tlscacerts/tlsca.org1.example.com-cert.pem
+
+  peer11.org1.example.com:
+    url: grpcs://localhost:7106
+    grpcOptions:
+      ssl-target-name-override: peer11.org1.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org1.example.com/peers/peer11.org1.example.com/msp/tlscacerts/tlsca.org1.example.com-cert.pem
+
+  peer12.org1.example.com:
+    url: grpcs://localhost:7111
+    grpcOptions:
+      ssl-target-name-override: peer12.org1.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org1.example.com/peers/peer12.org1.example.com/msp/tlscacerts/tlsca.org1.example.com-cert.pem
+
+  peer13.org1.example.com:
+    url: grpcs://localhost:7116
+    grpcOptions:
+      ssl-target-name-override: peer13.org1.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org1.example.com/peers/peer13.org1.example.com/msp/tlscacerts/tlsca.org1.example.com-cert.pem
+
+  peer14.org1.example.com:
+    url: grpcs://localhost:7121
+    grpcOptions:
+      ssl-target-name-override: peer14.org1.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org1.example.com/peers/peer14.org1.example.com/msp/tlscacerts/tlsca.org1.example.com-cert.pem
+
+  # peer15.org1.example.com:
+  #   url: grpcs://localhost:7126
+  #   grpcOptions:
+  #     ssl-target-name-override: peer15.org1.example.com
+  #     grpc.keepalive_time_ms: 600000
+  #   tlsCACerts:
+  #     path: networks/fabric/base/crypto-config/peerOrganizations/org1.example.com/peers/peer15.org1.example.com/msp/tlscacerts/tlsca.org1.example.com-cert.pem
+
   peer0.org2.example.com:
     url: grpcs://localhost:8051
     grpcOptions:
@@ -294,3 +342,50 @@ peers:
     tlsCACerts:
       path: networks/fabric/base/crypto-config/peerOrganizations/org2.example.com/peers/peer9.org2.example.com/msp/tlscacerts/tlsca.org2.example.com-cert.pem
 
+  peer10.org2.example.com:
+    url: grpcs://localhost:9101
+    grpcOptions:
+      ssl-target-name-override: peer10.org2.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org2.example.com/peers/peer10.org2.example.com/msp/tlscacerts/tlsca.org2.example.com-cert.pem
+
+  peer11.org2.example.com:
+    url: grpcs://localhost:9106
+    grpcOptions:
+      ssl-target-name-override: peer11.org2.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org2.example.com/peers/peer11.org2.example.com/msp/tlscacerts/tlsca.org2.example.com-cert.pem
+
+  peer12.org2.example.com:
+    url: grpcs://localhost:9111
+    grpcOptions:
+      ssl-target-name-override: peer12.org2.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org2.example.com/peers/peer12.org2.example.com/msp/tlscacerts/tlsca.org2.example.com-cert.pem
+
+  peer13.org2.example.com:
+    url: grpcs://localhost:9116
+    grpcOptions:
+      ssl-target-name-override: peer13.org2.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org2.example.com/peers/peer13.org2.example.com/msp/tlscacerts/tlsca.org2.example.com-cert.pem
+
+  peer14.org2.example.com:
+    url: grpcs://localhost:9121
+    grpcOptions:
+      ssl-target-name-override: peer14.org2.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org2.example.com/peers/peer14.org2.example.com/msp/tlscacerts/tlsca.org2.example.com-cert.pem
+
+  # peer15.org2.example.com:
+  #   url: grpcs://localhost:9126
+  #   grpcOptions:
+  #     ssl-target-name-override: peer15.org2.example.com
+  #     grpc.keepalive_time_ms: 600000
+  #   tlsCACerts:
+  #     path: networks/fabric/base/crypto-config/peerOrganizations/org2.example.com/peers/peer15.org2.example.com/msp/tlscacerts/tlsca.org2.example.com-cert.pem
